Bug 656225 - XUL listbox accessible tree doens't get updated, r=tbsaunde, bz